fix: toggle theme button , hide scrollbar

--- a/gojirun/app/globals.css
+++ b/gojirun/app/globals.css
@@ -2,8 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html {
+  overflow:   scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    display: none;
+    background: transparent;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 @layer utilities {
